<resources>
    <string name="app_name">SalesManager</string>
    <string name="scan_assets">SCAN ASSETS</string>
    <string name="turn_on_flashlight">Off</string>
    <string name="scan">Scan QR/Barcode</string>
    <string name="turn_off_flashlight">On</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="scan_barcode_not_found">Result not found</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="halo">Halo,</string>
    <string name="submit_stock">Submit Asset</string>
    <string name="submit_assets">Submit</string>
    <string name="status_submit">Status Submit</string>
    <string name="press_again_to_exit_app">Press again to exit app</string>
    <string name="insert_manual">" Insert Manual"</string>
    <string name="role">role</string>
    <string name="project">Task</string>
    <string name="date">date</string>
    <string name="project_detail">Project Detil</string>
    <string name="keterangan">Keterangan :</string>
    <string name="status">Status :</string>
    <string name="document">Document</string>
    <string name="new_document">New Activity</string>
    <string name="submit">Submit</string>
    <string name="activity">Activity</string>
    <string name="tipe_dokumen">Tipe Dokumen</string>
    <string name="email_tujuan">Email Tujuan</string>
    <string name="tanggal_dokumen">Tanggal Dokumen</string>
    <string name="nomor_dokumen">Nomor Dokumen</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="pilih_tipe_dokumen">Pilih Tipe Dokumen</string>
    <string name="cannot_null">Tidak Boleh Kosong</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="request_document">Request Document</string>
    <string name="tanggal">Tanggal</string>
    <string name="caption">Caption</string>
    <string name="requestdocument">Req. Document</string>
    <string name="add_activity">Add Activity</string>
    <string name="list_document">List Document</string>
    <string name="turn_on">Turn On</string>
    <string name="list_product">List Product</string>
    <string name="nama">Nama :</string>
    <string name="harga">Harga :</string>
    <string name="dummy">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</string>
    <string name="jenis">Jenis :</string>
    <string name="tipe">Tipe :</string>
    <string name="kapasitas">Kapasitas :</string>
    <string name="jumlah">Jumlah :</string>
    <string name="satuan">Satuan :</string>
    <string name="berat">Berat :</string>
    <string name="realise">Realise</string>
    <string name="nama_title">Nama</string>
    <string name="email_title">Email</string>
    <string name="phone_title">Phone</string>
    <string name="provinsi_title">Provinsi</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="default_notification_channel_id">1040</string>
    <string name="phone_number">Phone Number</string>
    <string name="sales_code">Sales Code</string>
</resources>