<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.submit.SubmitActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/colorFontWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_toolbar"
                    style="@style/SubTitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="48dp"
                    android:gravity="center"
                    android:text="@string/request_document"
                    android:textColor="@color/colorFontPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/tipe_dokumen_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_input"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/tipe_dokumen"
            android:inputType="text"
            android:padding="16dp"
            android:textCursorDrawable="@drawable/black_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_layout"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/nomor_dokumen_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_input"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/nomor_dokumen"
            android:inputType="text"
            android:padding="16dp"
            android:textCursorDrawable="@drawable/black_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipe_dokumen_activity"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/status"
            android:textColor="@color/colorFontSecondary"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomor_dokumen_activity" />

        <RadioGroup
            android:id="@+id/status_dokumen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/status_title"
            app:layout_constraintTop_toBottomOf="@+id/nomor_dokumen_activity">

            <RadioButton
                android:id="@+id/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/open" />

            <RadioButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/close" />

        </RadioGroup>

        <EditText
            android:id="@+id/tanggal_dokumen_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_input"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/tanggal_dokumen"
            android:inputType="text"
            android:padding="16dp"
            android:textCursorDrawable="@drawable/black_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_dokumen"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/email_dokumen_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_input"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/email_tujuan"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textCursorDrawable="@drawable/black_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tanggal_dokumen_activity"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/keterangan_dokumen_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_input"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/keterangan"
            android:inputType="textEmailAddress"
            android:maxLines="4"
            android:padding="16dp"
            android:textCursorDrawable="@drawable/black_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_dokumen_activity"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/add_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_black"
            android:fontFamily="@font/rubik_bold"
            android:padding="12dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/colorWhiteBackground"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>