<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/project_icon_list"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/project_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/project_name_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:ellipsize="end"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/project"
        android:textColor="@color/colorFontPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/project_date_list"
        app:layout_constraintStart_toEndOf="@+id/project_icon_list"
        app:layout_constraintTop_toTopOf="@+id/project_icon_list" />

    <TextView
        android:id="@+id/project_customer_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/project"
        android:textColor="@color/colorFontPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/project_name_list"
        app:layout_constraintStart_toEndOf="@+id/project_icon_list"
        app:layout_constraintTop_toBottomOf="@+id/project_name_list" />

    <TextView
        android:id="@+id/project_date_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/date"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/project_customer_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/project_name_list" />

    <TextView
        android:id="@+id/project_status_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_role"
        android:ellipsize="end"
        android:fontFamily="@font/rubik_medium"
        android:padding="2dp"
        android:text="@string/role"
        android:textColor="@color/colorWhiteBackground"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/project_customer_list"
        app:layout_constraintTop_toBottomOf="@+id/project_customer_list" />

    <View
        android:id="@+id/line_bottom_list"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>